k8s/iam/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iam
  name: iam
spec:
  ports:
  - name: http-app
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: iam
  type: ClusterIP
status:
  loadBalancer: {}
