k8s/iam/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: iam
spec:
  host: iam
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
