k8s/iam/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam
spec:
  hosts:
  - iam
  http:
  - route:
    - destination:
        host: iam
        subset: v1
      weight: 100
    # - destination:
    #     host: coverage
    #     subset: v2
    #   weight: 100
    
    # fault:
    #   abort:
    #     percentage:
    #       value: 40.0
    #     httpStatus: 400
